--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,12 +261,30 @@
     object-fit: fill;
 }
 
+.movies-img-box{
+    padding: 1rem;
+}
+
+.movie-info-menu{
+    flex: 0 0 auto !important;
+    width: 65.33333333% !important;
+    /* align-items: center; */
+    display: flex !important;
+    justify-content: space-around !important;
+    flex-direction: column !important;
+}
+
 .movie-info-menu li:last-child{
     margin-bottom: 1rem !important;
 }
 
+.movies-more-option{
+    padding-left: 4rem !important;
+    padding-right: 2rem !important;
+}
+
 .moives-item{
-    width: 48%;
+    width: 100%;
     margin: 0 0.5rem 1.5rem 0.5rem !important;
     
 }
@@ -612,6 +630,10 @@ footer{
     }
     .custom-carousel{
         display: none;
+    }
+
+    .movie-info-menu{
+        width: 100%;
     }
 
 
